--- a/r_datascience/.Ulysses-Group.plist
+++ b/r_datascience/.Ulysses-Group.plist
@@ -2,34 +2,36 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>order</key>
-	<array>
-		<string>README.md</string>
-	</array>
 	<key>resolutionData</key>
 	<dict>
-		<key>order</key>
+		<key>sheetClusters</key>
 		<dict>
-			<key>README.md</key>
+			<key>RP_notes.md</key>
 			<dict>
 				<key>lastModification</key>
-				<real>483511497.79059201</real>
+				<real>484715441.64864701</real>
 				<key>version</key>
 				<dict>
 					<key>fa1df969091cd7fb84d029e978001951ca24cb2ad18c22a334a1e54df50017d9</key>
-					<integer>6</integer>
+					<integer>2</integer>
 				</dict>
 			</dict>
 		</dict>
 	</dict>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>RP_notes.md</string>
+		</array>
+	</array>
 	<key>storeFormatVersion</key>
 	<integer>1</integer>
 	<key>versioning</key>
 	<dict>
-		<key>order</key>
+		<key>sheetClusters</key>
 		<dict>
 			<key>fa1df969091cd7fb84d029e978001951ca24cb2ad18c22a334a1e54df50017d9</key>
-			<integer>10</integer>
+			<integer>2</integer>
 		</dict>
 	</dict>
 </dict>
